Bug 1058919 - Make regions and matrix printable. r=botond

--HG--
extra : rebase_source : d881d86afbba64ba989c66fe98de89ef0a381dba